CRUD Roles y Permisos

--- a/templates/edificios/edificioBuscar.html
+++ b/templates/edificios/edificioBuscar.html
@@ -29,5 +29,12 @@
   </div>
 </div>
 
+<div class="row">
+  <div>
+      <a class="btn btn-outline-dark" href="{% url 'edificios:Edificio' %}">Regresar</a>
+  </div>
+
+</div>
+
 
 {% endblock %}
