--- a/templates/users/RolPermiso/Permiso/permiso.html
+++ b/templates/users/RolPermiso/Permiso/permiso.html
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col">
         <div class="d-flex justify-content-start">
-            <a class="btn btn-dark" href="#">Agregar: </a>
+            <a class="btn btn-dark" href="{% url 'users:CrearPermiso' %}">Agregar: </a>
           </div>
     </div>
 </div>
@@ -39,9 +39,10 @@
                             Acciones
                             </button>
                             <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Detalle</a></li>
-                            <li><a class="dropdown-item" href="#">Editar</a></li>
-                            <li><a class="dropdown-item" href="#">Eliminar</a></li>
+
+                            <li><a class="dropdown-item" href="{% url 'users:ActualizarPermiso' permiso.id %}">Editar</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users:EliminarPermiso' permiso.id %}">Eliminar</a></li>
+
                             </ul>
                         </div>
                     </td>
@@ -57,7 +58,7 @@
 <div class="row justify-content-center">
     <div class="col-4" style="text-align: center;">
         <h5>En este momento no se ha agregado ningun Permiso a la plataforma</h5>
-        <a href="#" class="btn btn-outline-dark">Crear Permiso</a>
+        <a href="{% url 'users:CrearPermiso'  %}" class="btn btn-outline-dark">Crear Permiso</a>
     </div>
 </div>
 
