--- a/templates/users/RolPermiso/Rol/rol.html
+++ b/templates/users/RolPermiso/Rol/rol.html
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col">
         <div class="d-flex justify-content-start">
-            <a class="btn btn-dark" href="#">Agregar: </a>
+            <a class="btn btn-dark" href="{% url 'users:CrearRol' %}">Agregar: </a>
           </div>
     </div>
 </div>
@@ -39,9 +39,10 @@
                             Acciones
                             </button>
                             <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Detalle</a></li>
-                            <li><a class="dropdown-item" href="#">Editar</a></li>
-                            <li><a class="dropdown-item" href="#">Eliminar</a></li>
+
+                            <li><a class="dropdown-item" href="{% url 'users:ActualizarRol' rol.id %}">Editar</a></li>
+                            <li><a class="dropdown-item" href="{% url 'users:EliminarRol' rol.id %}">Eliminar</a></li>
+                                <li><a class="dropdown-item" href="#">Modificar permisos</a></li>
                             </ul>
                         </div>
                     </td>
@@ -57,7 +58,7 @@
 <div class="row justify-content-center">
     <div class="col-4" style="text-align: center;">
         <h5>En este momento no se ha agregado ningun Rol a la plataforma</h5>
-        <a href="#" class="btn btn-outline-dark">Crear Permiso</a>
+        <a href="{% url 'users:CrearRol' %}" class="btn btn-outline-dark">Crear Rol</a>
     </div>
 </div>
 
