--- a/templates/users/Estudiante/estudiante.html
+++ b/templates/users/Estudiante/estudiante.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-dark" href="#">Agregar: </a>
+                    <a class="btn btn-dark" href="{% url 'users:add_user'%}">Agregar: </a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
     <div class="row justify-content-center">
         <div class="col-4" style="text-align: center;">
             <h5>En este momento no se ha agregado ningun Estudiante a la plataforma</h5>
-            <a href="#" class="btn btn-outline-dark">Crear Estudainte</a>
+            <a href="{% url 'users:add_user'%}" class="btn btn-outline-dark">Crear Estudiante</a>
         </div>
     </div>
     {% endif %}
