--- a/templates/users/create.html
+++ b/templates/users/create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col">
-  <h2>Registro</h2>
+  <h2 slot="text-align:center">Registro</h2>
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
