--- a/templates/users/Usuarios/usuario.html
+++ b/templates/users/Usuarios/usuario.html
@@ -64,9 +64,9 @@
                                         Acciones
                                         </button>
                                         <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="{% url 'users:detail_user' usuario.id%}">Detalle</a></li>
-                                        <li><a class="dropdown-item" href="#">Editar</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'users:delete_user'  usuario.id %} ">Eliminar</a></li>
+                                            <li><a class="dropdown-item" href="{% url 'users:detail_user' usuario.id%}">Detalle</a></li>
+                                            <li><a class="dropdown-item" href="{% url 'users:update_user' usuario.id%}">Editar</a></li>
+                                            <li><a class="dropdown-item" href="{% url 'users:delete_user' usuario.id%}">Eliminar</a></li>
                                         </ul>
                                     </div>
                                 </td>
