--- a/templates/users/create.html
+++ b/templates/users/create.html
@@ -3,10 +3,11 @@
 {% block content %}
 <div class="col">
   <h2 slot="text-align:center">Registro</h2>
+  <a href="{% url 'users:usuario'%}">Regresar</a>
   <form method="post">
     {% csrf_token %}
     {% for field in form %}
-        
+        {% if field.name != 'estado' %}
             <div class="form-group">
                 {{ field.label_tag }}
                 {{ field }}
@@ -15,7 +16,7 @@
                     {{ field.errors }}
                 {% endif %}
             </div>
-
+            {% endif %}
     
         
             
