--- a/templates/pensums/pensum/pensum.html
+++ b/templates/pensums/pensum/pensum.html
@@ -54,6 +54,7 @@
             <th scope="col">Codigo Pensum</th>
             <th scope="col">Inicio de vigencia</th>
             <th scope="col">Carrera del Pensum</th>
+            <th scope="col">Fecha de creación</th>
             <th scope="col">Opciones</th>
           </tr>
 
