--- a/templates/pensums/pensum/pensumDelete.html
+++ b/templates/pensums/pensum/pensumDelete.html
@@ -6,7 +6,7 @@
     <div class="d-flex justify-content-center" style="height: 50vh; align-items: center; display: flex;">
         <form method="post">
             {% csrf_token %}
-            <h2>¿Desea eliminar el pensum <span>{{pensum.codigo_pensum}}</span> ?</h2>
+            <h2>¿Desea eliminar el pensum con código <span>{{pensum.codigo_pensum}}</span> ?</h2>
             <div class="boton">
                 <button class="btn btn-danger" type="submit">Sí, eliminar</button>
                 <a class="btn btn-default" href="{% url 'pensums:Pensum' %}">Cancelar</a>
