--- a/templates/pensums/pensum/pensumForm.html
+++ b/templates/pensums/pensum/pensumForm.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="card" style="margin-top: 2.5rem;">
     <div class="card-body">
-        <a href="{% url 'pensums:Carrera'%}">Regresar</a>
+        <a href="{% url 'pensums:Pensum'%}">Regresar</a>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
@@ -28,7 +28,7 @@
             <br>
             
             <button type="submit" class="btn  btn-dark ">{{message}}</button>
-            <a href="{% url 'pensums:Carrera'%}">CANCELAR</a>
+            <a href="{% url 'pensums:Pensum'%}">CANCELAR</a>
             
 
         </form>
