Finalizando Módulo Pensum y Avance Cargas

--- a/templates/cargas/sub/modcargalist.html
+++ b/templates/cargas/sub/modcargalist.html
@@ -37,12 +37,12 @@
     
   </div>
 
-  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE EDIFICIOS-->
+  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE CARGAS-->
   <div class="row" style="margin-top: 2rem;">
     <div class="col">
       <table class="table table-hover caption-top ">
         <div class="d-flex justify-content-end">
-          {% include 'edificios/snippets/edificioBuscar.html' with query=query %}
+          {% include 'cargas/snippets/buscar_carga.html' with query=query %}
 
         </div>
         
