--- a/templates/pensums/pensum/pensumCurso.html
+++ b/templates/pensums/pensum/pensumCurso.html
@@ -5,21 +5,15 @@
 {% block content %}
 
 
-{% if carga_list %}
+{% if detallepensumcurso_list %}
 
 <div class="row" style="margin-top: 5rem;">  
   <div class="d-flex justify-content-center">
-  </div>
-</div>
-<div class="row">
-  <div class="d-flex justify-content-center">
-    {% include 'cargas/snippets/breadcrumb.html'%}
+    
+    <h2>{{ message }}</h2>
 
   </div>
-
 </div>
-
-
 
 <div class="row">
 
@@ -28,52 +22,46 @@
 
     <div class="col">
       <div class="d-flex justify-content-start">
-        <a class="btn btn-dark" href="{% url 'cargas:carga-create'%}">Agregar: </a>
+        <a class="btn btn-dark" href="{% url 'pensums:AddCurso'%}">Agregar: </a>
       </div>
     </div>
 
-    
-
-    
   </div>
 
-  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE EDIFICIOS-->
+  <!--APARTADO DONDE SE MUESTRA EL LISTADO DE CURSOS-->
   <div class="row" style="margin-top: 2rem;">
     <div class="col">
       <table class="table table-hover caption-top ">
-        <div class="d-flex justify-content-end">
-          {% include 'cargas/snippets/buscar_carga.html' with query=query %}
 
-        </div>
         
         <thead>          
           <tr>
-            <th scope="col">Año</th>
-            <th scope="col">Ciclo académico</th>
+            <th scope="col">Codigo Pensum</th>
+            <th scope="col">Cursos</th>
+            <th scope="col">Ciclo</th>
             <th scope="col">Estado</th>
-            <th scope="col">Fecha envío</th>
-            <th scope="col">Fecha de aprobación</th>
-
+            <th scope="col">Opciones</th>
           </tr>
-
-
 
         </thead>
         <tbody>
-          {% for carga in carga_list %}
+          {% for detallepensumcurso in detallepensumcurso_list %}
           <tr>
-            <td scope="row">{{carga.year}}</td>
-            <td>{{carga.ciclo_acad}}</td>
-            <td> {{carga.estado}}</td>
-            <td>{{carga.fecha_envio}}</td>
-            <td>{{carga.fecha_aprob}}</td>
+            <td scope="row">{{detallepensumcurso.codigo_pensum}}</td>
+            <td>{{detallepensumcurso.cursoid}}</td>
+            <td>{{detallepensumcurso.tipociclo}}</td>
+            <td>{{detallepensumcurso.estado}}</td>
 
             <td>
-              <a class="btn btn-outline-dark" href="{% url 'cargas:carga-update' carga.id %}">Modificar</a>
-              <a class="btn btn-outline-dark" href="#">Visualizar</a>
-              <a class="btn btn-outline-dark" href="{% url 'cargas:carga-delete' carga.id %}">Eliminar</a>
-
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Opciones</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url 'pensums:AddCurso'  %}">Editar curso</a></li>
+                  <li><a class="dropdown-item" href="{% url 'pensums:RestCurso' detallepensumcurso.id %}">Quitar</a></li>
+                </ul>
+              </li>
             </td>
+
           </tr>
           {% endfor %}
 
@@ -95,9 +83,6 @@
           {% endif %}
 
 
-          
-          
-          
           {% for num in page_obj.paginator.page_range %}
             {% if num == page_obj.number%}
             <li class="page-item active" aria-current="page">
@@ -137,13 +122,9 @@
 <div class="row">
   <div class="col-12">
     <div class="d-flex justify-content-center" style="height: 50vh; align-items: center; display: flex;">
-      <h2>No se ha encontrado ninguna carga</h2>
-      <a class="btn btn btn-outline-dark" href="{% url 'cargas:carga-create' %}"  style="margin-left: 0.5rem;">Agregar</a>
+      <h2>No se ha encontrado ningun curso add</h2>
+      <a class="btn btn btn-outline-dark" href="{% url 'pensums:AddCurso' %}"  style="margin-left: 0.5rem;">Agregar curso</a>
 
-
-     
-      
-      
     </div>
   </div>
 </div>
