modulo de carga

--- a/templates/cargas/carga_delete.html
+++ b/templates/cargas/carga_delete.html
@@ -9,7 +9,7 @@
             <h2>¿Desea eliminar la carga?</h2>
             <div class="boton">
                 <button class="btn btn-danger" type="submit">Sí, eliminar</button>
-                <a class="btn btn-default" href="{% url 'cargas:carga-list' %}">Cancelar</a>
+                <a class="btn btn-default" href="{% url 'cargas:carga' %}">Cancelar</a>
             </div>
 
         </form>
