--- a/templates/cargas/carga_update.html
+++ b/templates/cargas/carga_update.html
@@ -1,15 +1,12 @@
 {% extends 'base.html' %}
 {% load static%}
 
-{% block css %}
-<link href="{% static 'lib/jquery-ui-1.12.1/jquery-ui.min.css' %}" rel="stylesheet" />
-<link href="{% static 'lib/select2-4.0.13/css/select2.min.css' %}" rel="stylesheet" />
-{% endblock %}
+
 
 {% block content %}
 <div class="card" style="margin-top: 2.5rem;">
     <div class="card-body">
-        <a href="{% url 'cargas:carga-list'%}">Regresar</a>
+        <a href="{% url 'cargas:carga'%}">Regresar</a>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
@@ -28,7 +25,7 @@
             <br>
             
             <button type="submit" class="btn  btn-dark ">APLICAR CAMBIOS</button>
-            <a href="{% url 'cargas:carga-list'%}">CANCELAR</a>
+            <a href="{% url 'cargas:carga'%}">CANCELAR</a>
             
 
         </form>
